[gd_scene load_steps=11 format=3 uid="uid://e485vmtfqjfk"]

[ext_resource type="Script" path="res://UI_HUD/scripts/MetaverseHUD.gd" id="1_hud"]
[ext_resource type="Theme" path="res://UI_HUD/themes/metaverse_theme.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_topbar"]
content_margin_left = 12.0
content_margin_top = 6.0
content_margin_right = 12.0
content_margin_bottom = 6.0
bg_color = Color(0.04, 0.05, 0.08, 0.92)
border_width_bottom = 2
border_color = Color(0.2, 0.45, 0.75, 0.6)
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_separator"]
content_margin_left = 1.0
content_margin_right = 1.0
bg_color = Color(0.3, 0.5, 0.75, 0.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bottombar"]
content_margin_left = 8.0
content_margin_top = 6.0
content_margin_right = 8.0
content_margin_bottom = 6.0
bg_color = Color(0.04, 0.05, 0.08, 0.92)
border_width_top = 2
border_color = Color(0.2, 0.45, 0.75, 0.6)
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_normal"]
bg_color = Color(0.12, 0.15, 0.22, 0.85)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.45, 0.65, 0.5)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_pressed"]
bg_color = Color(0.22, 0.42, 0.68, 0.95)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5, 0.75, 1, 0.9)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
bg_color = Color(0.18, 0.28, 0.42, 0.92)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.6, 0.9, 0.8)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_minimap"]
bg_color = Color(0.03, 0.05, 0.08, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.25, 0.5, 0.8, 0.7)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.35)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_minimap_inner"]
bg_color = Color(0.08, 0.12, 0.18, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.35, 0.55, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="MetaverseHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_theme")
script = ExtResource("1_hud")

[node name="TopBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 42.0
grow_horizontal = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_topbar")

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="WorldIcon" type="Label" parent="TopBar/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.7, 1, 1)
theme_override_font_sizes/font_size = 18
text = "üåê"

[node name="LocationLabel" type="Label" parent="TopBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.97, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6)
theme_override_font_sizes/font_size = 14
text = "WoldVirtual3D"

[node name="VSeparator" type="VSeparator" parent="TopBar/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_separator")

[node name="RegionLabel" type="Label" parent="TopBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.9, 0.95, 1)
theme_override_font_sizes/font_size = 13
text = "Isla Virtual"

[node name="VSeparator2" type="VSeparator" parent="TopBar/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_separator")

[node name="CoordsIcon" type="Label" parent="TopBar/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "‚äï"

[node name="CoordsLabel" type="Label" parent="TopBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.85, 0.9, 1)
theme_override_font_sizes/font_size = 12
text = "(0, 0, 0)"

[node name="Spacer" type="Control" parent="TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimeIcon" type="Label" parent="TopBar/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.75, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "‚òÄ"

[node name="TimeLabel" type="Label" parent="TopBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.92, 0.95, 1)
theme_override_font_sizes/font_size = 13
text = "12:00"

[node name="VSeparator3" type="VSeparator" parent="TopBar/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_separator")

[node name="FPSLabel" type="Label" parent="TopBar/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 0.9)
theme_override_font_sizes/font_size = 11
text = "FPS: 60"

[node name="BottomBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -56.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bottombar")

[node name="HBoxContainer" type="HBoxContainer" parent="BottomBar"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="VSeparator" type="VSeparator" parent="BottomBar/HBoxContainer"]
modulate = Color(0.5, 0.7, 1, 0.4)
layout_mode = 2

[node name="BtnInventory" type="Button" parent="BottomBar/HBoxContainer"]
custom_minimum_size = Vector2(85, 40)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "üì¶ Inventario"

[node name="BtnMap" type="Button" parent="BottomBar/HBoxContainer"]
custom_minimum_size = Vector2(70, 40)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "üó∫ Mapa"

[node name="VSeparator2" type="VSeparator" parent="BottomBar/HBoxContainer"]
modulate = Color(0.5, 0.7, 1, 0.4)
layout_mode = 2

[node name="BtnBuild" type="Button" parent="BottomBar/HBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "üî® Construir"

[node name="BtnSearch" type="Button" parent="BottomBar/HBoxContainer"]
custom_minimum_size = Vector2(70, 40)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "üîç Buscar"

[node name="VSeparator3" type="VSeparator" parent="BottomBar/HBoxContainer"]
modulate = Color(0.5, 0.7, 1, 0.4)
layout_mode = 2

[node name="BtnSnapshot" type="Button" parent="BottomBar/HBoxContainer"]
custom_minimum_size = Vector2(70, 40)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "üì∑ Foto"

[node name="BtnSettings" type="Button" parent="BottomBar/HBoxContainer"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
text = "‚öô"

[node name="MinimapPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 54.0
offset_right = -12.0
offset_bottom = 224.0
grow_horizontal = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_minimap")

[node name="VBoxContainer" type="VBoxContainer" parent="MinimapPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Header" type="HBoxContainer" parent="MinimapPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MinimapPanel/VBoxContainer/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.85, 1, 1)
theme_override_font_sizes/font_size = 11
text = "üó∫ MINI MAPA"

[node name="Spacer" type="Control" parent="MinimapPanel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ZoomOut" type="Button" parent="MinimapPanel/VBoxContainer/Header"]
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "-"

[node name="ZoomIn" type="Button" parent="MinimapPanel/VBoxContainer/Header"]
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "+"

[node name="MapDisplay" type="Panel" parent="MinimapPanel/VBoxContainer"]
custom_minimum_size = Vector2(150, 120)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_minimap_inner")

[node name="PlayerMarker" type="Label" parent="MinimapPanel/VBoxContainer/MapDisplay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -10.0
offset_right = 8.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 0.9, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "‚ñ≤"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridOverlay" type="ColorRect" parent="MinimapPanel/VBoxContainer/MapDisplay"]
modulate = Color(0.3, 0.5, 0.7, 0.15)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ControlsHint" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -130.0
offset_right = 262.0
offset_bottom = -68.0
grow_vertical = 0

[node name="Label" type="Label" parent="ControlsHint"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.8, 0.85, 0.85)
theme_override_font_sizes/font_size = 10
text = "WASD: Mover | Space: Saltar | Shift: Correr
Mouse: Mirar | Scroll: Zoom | ESC: Men√∫"

[node name="connection" type="Node" parent="."]
